--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
    "license": "UNLICENCED",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "app-module-path": "^1.0.5",
     "mocha": "^2.3.3",
     "chai": "^3.4.0"
   },
